--- a/public/index.html
+++ b/public/index.html
@@ -20,11 +20,14 @@
       html,
       body,
       #root {
-        margin: 0;
-        padding: 0;
         width: 100%;
         min-height: 100vh;
         font-family: "Poppins", sans-serif;
+      }
+      * {
+        margin: 0;
+        padding: 0;
+        box-sizing: border-box;
       }
     </style>
   </head>
